--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "pgfine"
+description = "Yet another database migration tool for postgres."
 version = "0.1.0"
 authors = ["Marius Kavaliauskas <mariuskava@gmail.com>"]
 edition = "2018"
+license-file = "LICENSE"
+keywords = ["pgfine", "postgres", "postgresql", "migration", "database"]
+repository = "https://gitlab.com/mrsk/pgfine"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
