--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pgfine"
 description = "Yet another database migration tool for postgres."
-version = "0.7.1"
+version = "0.8.0"
 authors = ["Marius Kavaliauskas <mariuskava@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -17,3 +17,5 @@ anyhow = "1.0.38"
 postgres = "0.19.0"
 md-5 = "0.9.1"
 hex = "0.4.2"
+native-tls = "0.2.7"
+postgres-native-tls = "0.5.0"
